--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react-markdown": "^10.1.0",
     "react-speech-recognition": "^4.0.0",
     "react-toastify": "^11.0.5",
+    "react-tsparticles": "^2.12.2",
     "react-use": "^17.6.0",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.15",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
